@@ -1,3 +1,10 @@
+2005-09-01  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+	* embed/mozilla/EphyBrowser.cpp:
+
+	Only listen for trusted events.
+
 2005-08-31  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
